Refactor null handling and streamline test assertions
Updated `SortDirectionConverter` to handle nullable inputs, ensured proper usage of `Schema.RequiredMode.REQUIRED`, and refactored test assertions for improved readability and consistency. Simplified imports in test files for cleaner code.